fix: scanner no longer bleeds over to the right side

--- a/src/styles/fridgestyle.css
+++ b/src/styles/fridgestyle.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
-
 .fridge-title {
   color: rgb(34, 34, 34);
   font-size: 70px;
@@ -175,7 +173,8 @@
   font-weight: 600;
   margin: 10px 0;
   cursor: pointer;
-  box-shadow: 0 0 20px rgb(174, 5, 5), 0 0 40px #fd7600, 0 0 20px #16be06;
+  box-shadow: 0 0 20px rgb(0, 179, 170), 0 0 40px rgb(0, 179, 170),
+    0 0 20px rgb(0, 179, 170);
   transition-delay: 0s;
 }
 .recipe-ingredient-name {
@@ -188,7 +187,7 @@
   color: rgb(34, 34, 34);
   font-size: 2vw;
   text-align: center;
-  font-weight: lighter;
+  font-weight: 300;
   font-family: "Poppins", sans-serif;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -220,7 +219,7 @@
 }
 .fridge-button {
   width: 200px;
-  background-color: transparent;
+  background-color: #fff;
   border: none;
   outline: none;
   height: 30px;
@@ -231,6 +230,7 @@
   margin: 5px 0;
   cursor: pointer;
   font-size: 14px;
+  font-family: "Poppins", sans-serif;
 }
 .fridge-button:hover {
   width: 200px;
@@ -244,9 +244,37 @@
   margin: 5px 0;
   cursor: pointer;
   font-size: 14px;
+  font-family: "Poppins", sans-serif;
 }
 
 @media (max-width: 1024px) {
+  .get-recipe-button {
+    width: 200px;
+    background-color: rgb(0, 179, 170);
+    outline: none;
+    height: 30px;
+    border-radius: 49px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 10px 0;
+    cursor: pointer;
+    font-size: 14px;
+  }
+  .get-recipe-button:hover {
+    width: 200px;
+    background-color: rgb(0, 179, 170);
+    outline: none;
+    height: 30px;
+    border-radius: 49px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 10px 0;
+    cursor: pointer;
+    box-shadow: none;
+    transition-delay: 0s;
+  }
   .single-ingredient-container {
     margin-right: 0px;
     z-index: 4;
@@ -265,6 +293,7 @@
     margin: 5px 0;
     cursor: pointer;
     font-size: 14px;
+    font-family: "Poppins", sans-serif;
   }
   .fridge-animation-area {
     background: linear-gradient(
@@ -476,6 +505,7 @@
   .fridge-button {
     font-size: 12px;
     width: 170px;
+    font-family: "Poppins", sans-serif;
   }
   .fridge-button:hover {
     font-size: 12px;
